# Codexx

./: .env  .env.example  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: schedule.json
src/codexx_crypto_agent.egg-info/: SOURCES.txt  top_level.txt
src/cryptox_agent/: __init__.py  agent.py  cli.py  config.py  llm.py  prompts.py  rag.py  scheduler.py
src/cryptox_agent/tools/: code.py  files.py  messaging.py  web.py
tests/: test_agent.py  test_config.py  test_llm.py  test_rag.py  test_scheduler.py
